force-app/main/default/objects/Worklog__c/Worklog__c.object-meta.xml
<CustomObject>
    <label>Worklog</label>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Worklog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worklogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>