force-app/main/default/objects/Worklog__c/fields/ContactCost__c.field-meta.xml
<CustomField>
    <fullName>ContactCost__c</fullName>
    <label>Contact Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>