force-app/main/default/objects/Worklog__c/fields/IdJira__c.field-meta.xml
<CustomField>
    <fullName>IdJira__c</fullName>
    <label>Id Jira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>