force-app/main/default/objects/Worklog__c/fields/IdTempo__c.field-meta.xml
<CustomField>
    <fullName>IdTempo__c</fullName>
    <externalId>true</externalId>
    <label>Id Tempo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>