force-app/main/default/objects/Worklog__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Worklogs</relationshipLabel>
    <relationshipName>Worklogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>