force-app/main/default/objects/Worklog__c/fields/IssueId__c.field-meta.xml
<CustomField>
    <fullName>IssueId__c</fullName>
    <label>IssueId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>