force-app/main/default/objects/Worklog__c/fields/LastModifiedJira__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedJira__c</fullName>
    <label>Last Modified Jira</label>
    <type>DateTime</type>
</CustomField>