force-app/main/default/objects/Worklog__c/fields/LogedDate__c.field-meta.xml
<CustomField>
    <fullName>LogedDate__c</fullName>
    <label>Loged Date</label>
    <type>Date</type>
</CustomField>