force-app/main/default/objects/Worklog__c/fields/TimeHour__c.field-meta.xml
<CustomField>
    <fullName>TimeHour__c</fullName>
    <description>tempo speso in ore</description>
    <formula>TimeSpendSecond__c/3600</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>