force-app/main/default/objects/Worklog__c/fields/TimeSpendSecond__c.field-meta.xml
<CustomField>
    <fullName>TimeSpendSecond__c</fullName>
    <label>Time Spend Second</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>