force-app/main/default/objects/Worklog__c/fields/WorklogCost__c.field-meta.xml
<CustomField>
    <fullName>WorklogCost__c</fullName>
    <description>Costo Log</description>
    <formula>TimeSpendSecond__c * (ContactCost__c /3600)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worklog Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>