force-app/main/default/objects/Worklog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>IdJira__c</columns>
    <columns>IdTempo__c</columns>
    <columns>IssueId__c</columns>
    <columns>Issue__c</columns>
    <columns>TimeHour__c</columns>
    <columns>WorklogCost__c</columns>
    <columns>LogedDate__c</columns>
    <columns>LastModifiedJira__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>